--- a/MovieDexV7/app/src/main/res/values/strings.xml
+++ b/MovieDexV7/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add">ADD</string>
     <string name="search">SEARCH</string>
     <string name="what_to_watch">WHAT TO WATCH</string>
+    <string name="element_text" />
 </resources>
